rpi5/lazylibrarian/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lazylibrarian
  labels:
    app: lazylibrarian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazylibrarian
  serviceName: lazylibrarian
  template:
    metadata:
      name: lazylibrarian
      labels:
        app: lazylibrarian
    spec:
      containers:
        - name: lazylibrarian
          image: lscr.io/linuxserver/lazylibrarian:c8ad32b8-ls68
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5299
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          #resources:
          #  requests:
          #    cpu: 250m
          #    memory: 500Mi
          #  limits:
          #    memory: 1Gi
          #livenessProbe:
          #  httpGet:
          #    port: 7878
          #    path: /ping
          #  initialDelaySeconds: 30
          #  periodSeconds: 30
          #  timeoutSeconds: 5
          #  failureThreshold: 3
          #readinessProbe:
          #  httpGet:
          #    port: 7878
          #    path: /ping
          #  periodSeconds: 10
          #  timeoutSeconds: 5
          #  failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: data
          nfs:
            path: /data
            server: 192.168.1.52
            readOnly: false
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
