rpi5/lazylibrarian/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
spec:
  selector:
    app: lazylibrarian
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5299
  type: ClusterIP
