rpi5/lazylibrarian/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lazylibrarian
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lazylibrarian.local`) || Host(`lazylibrarian.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: lazylibrarian
          port: 80
  tls:
    secretName: lazylibrarian-cert-tls
    domains:
      - main: lazylibrarian.local
        sans:
          - lazylibrarian.internal
